# aws-terraform-jenkins

./: .gitignore  .pre-commit-config.yaml  README.md  elb.tf  instance.tf  instance_iam_profile.tf  provider.tf  pyproject.toml  route53.tf  security_group.tf  state.tf  variables.tf  vpc.tf
.github/workflows/: action.yaml
