[tool.poetry]
name = "jenkins-aws-terraform-example"
version = "0.1.0"
description = ""
authors = ["wujiayi <wujiayi.chris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.17.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
